--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Core Values";
+    ViewBag.Message = "Centric Consulting believes success comes from doing good work and creating value for those around us.";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Our core purpose is to create unmatched experiences for clients and employees. An experience like no other is less about the event itself and more about the positive feeling you get from it.</p>
