--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,13 +10,11 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Begin Profile</h2>
+        <h2>Your Profile</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Fill out additional fields surrounding your profile. Connect core values to employees. 
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
