--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,21 +9,23 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Your Profile</h2>
+    <div class="col-md-6">
+        <h2>Navigation Help</h2>
         <p>
-            Fill out additional fields surrounding your profile. Connect core values to employees. 
+            <li>@Html.ActionLink("Core Values", "About", "Home")</li> 
+            <li>@Html.ActionLink("Contact Information", "Contact", "Home")</li> 
         </p>
         
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="col-md-6">
+        <h2>Centric Consulting Team</h2>
+        <p>
+            Product Owner: David Blocher <br />
+            Scrum Team: Sydney Kovach, Parker Cantwell, Cullen Nagle, Tony Caraffi <br />
+            (Must use valid Log-In in order to view)
+
+        </p>
+        <p><a class="btn btn-default" href="https://trello.com/b/UGm1ilY6/team-8">Team Trello Board &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+   
 </div>
