--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,8 +1,17 @@
 ﻿@{
     ViewBag.Title = "Core Values";
-    ViewBag.Message = "Centric Consulting believes success comes from doing good work and creating value for those around us.";
+    ViewBag.Message = "";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Our core purpose is to create unmatched experiences for clients and employees. An experience like no other is less about the event itself and more about the positive feeling you get from it.</p>
+
+
+<div class="container">
+    <h1></h1>
+    <p>Centric Consulting believes success comes from doing good work and creating value for those around us.</p>
+    <blockquote>
+        <p>Our core purpose is to create unmatched experiences for clients and employees. An experience like no other is less about the event itself and more about the positive feeling you get from it.</p>
+        <footer>From Centirc's website</footer>
+    </blockquote>
+</div>
