--- a/Views/UserDetails/Delete.cshtml
+++ b/Views/UserDetails/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MIS4200Team8.Models.UserDetail
+﻿@model MIS4200Team8.Models.UserDetails
 
 @{
     ViewBag.Title = "Delete";
@@ -8,17 +8,9 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>UserDetail</h4>
+    <h4>UserDetails</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.SID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SID)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.firstName)
         </dt>
@@ -60,11 +52,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.phone)
+            @Html.DisplayNameFor(model => model.phoneNumber)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.phone)
+            @Html.DisplayFor(model => model.phoneNumber)
         </dd>
 
         <dt>
