--- a/Views/UserDetails/Details.cshtml
+++ b/Views/UserDetails/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MIS4200Team8.Models.UserDetail
+﻿@model MIS4200Team8.Models.UserDetails
 
 @{
     ViewBag.Title = "Details";
@@ -7,17 +7,9 @@
 <h2>Details</h2>
 
 <div>
-    <h4>UserDetail</h4>
+    <h4>UserDetails</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.SID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SID)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.firstName)
         </dt>
@@ -59,11 +51,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.phone)
+            @Html.DisplayNameFor(model => model.phoneNumber)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.phone)
+            @Html.DisplayFor(model => model.phoneNumber)
         </dd>
 
         <dt>
@@ -77,6 +69,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
