--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -36,8 +36,8 @@
             <p>
                 <li>@Html.ActionLink("Core Values", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact Information", "Contact", "Home")</li>
-                @Html.ActionLink("Employee Profiles", "Index", "UserDetails")
-            </p>
+                <li>@Html.ActionLink("Employee Profiles", "Index", "UserDetails")</li>
+</p>
 
         </div>
         <div class="col-md-6">
