core values page

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,17 +1,42 @@
-﻿@{
-    ViewBag.Title = "Core Values";
-    ViewBag.Message = "";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿
 
-
-
-<div class="container">
-    <h1></h1>
-    <p>Centric Consulting believes success comes from doing good work and creating value for those around us.</p>
-    <blockquote>
-        <p>Our core purpose is to create unmatched experiences for clients and employees. An experience like no other is less about the event itself and more about the positive feeling you get from it.</p>
-        <footer>From Centirc's website</footer>
-    </blockquote>
+<div class="container-fluid text-center">
+    <h2>CORE VALUES</h2>
+    <h4>Centric Consulting believes success comes from doing good work and creating value for those around us</h4>
+    <br>
+    <div class="row">
+        <div class="col-sm-4">
+            <span class="glyphicon glyphicon-lock"></span>
+            <h4>INTEGRITY</h4>
+            <p>Providing honesty and transparency throughout business processes.</p>
+        </div>
+        <div class="col-sm-4">
+            <span class="glyphicon glyphicon-fire"></span>
+            <h4>PASSION</h4>
+            <p>Employees who have real interest in their work and take an active role in copmany growth.</p>
+        </div>
+        <div class="col-sm-4">
+            <span class="glyphicon glyphicon-heart"></span>
+            <h4>CUSTOMER SATISFACTION</h4>
+            <p>. Maintaining and strengthening the special relationship with each customer.</p>
+        </div>
+    </div>
+    <br><br>
+    <div class="row">
+        <div class="col-sm-4">
+            <span class="glyphicon glyphicon-wrench"></span>
+            <h4>INNOVATION</h4>
+            <p>Innovative efforts, ideas and methods that continually improve business processes.</p>
+        </div>
+        <div class="col-sm-4">
+            <span class="glyphicon glyphicon-check"></span>
+            <h4>EXCELLENCE</h4>
+            <p>Striving for excellence in every task no matter the size.</p>
+        </div>
+        <div class="col-sm-4">
+            <span class="glyphicon glyphicon-phone"></span>
+            <h4>TEAM WORK</h4>
+            <p>Working as one team to achieve corporate goals.</p>
+        </div>
+    </div>
 </div>
