--- a/Views/UserDetails/Index.cshtml
+++ b/Views/UserDetails/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<MIS4200Team8.Models.UserDetails>
 
 @{
-    ViewBag.Title = "Employee Profiles";
+    ViewBag.Title = "Index";
 }
 
-<h2>Employee Profiles</h2>
+<h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
