--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
 
                     <li>@Html.ActionLink("HOME", "Index", "Home")</li>
                     <li>@Html.ActionLink("CORE VALUES", "About", "Home")</li>
-                    <li>@Html.ActionLink("YOUR PROFILE", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("EMPLOYEES", "Index", "UserDetails")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
