--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -33,38 +33,43 @@
 
             <div class="col-sm-4" >
             <span class="glyphicon glyphicon-lock" > </span >
-            <h4 >INTEGRITY</h4 >
-            <p > Providing honesty and transparency throughout business processes.</p >
+            <h4>Commitment to Delivering Excellence</h4>
+            <p> We have a passion for consulting excellence. In all of our dealings we strive to first understand your needs and then deliver on our commitments 100 percent of the time.</p>
 
 
             </div >
             <div class="col-sm-4" >
             <span class="glyphicon glyphicon-fire" > </span >
-            <h4 > PASSION</h4 >
-            <p > Employees who have real interest in their work and take an active role in copmany growth.</p >
+            <h4>Embrace Integrity and Openness</h4>
+            <p>We value strong, positive relationships that are open and honest. This differentiates us and allows us to accomplish much more than we would be able to otherwise.</p>
             </div >
             <div class="col-sm-4" >
             <span class="glyphicon glyphicon-heart" > </span >
-            <h4 > CUSTOMER SATISFACTION</h4 >
-            <p > Maintaining and strengthening the special relationship with each customer.</p >
+            <h4>Practice Responsible Stewardship</h4>
+            <p> We value stewardship and fiscal accountability and always strive to do more with less. We guard and conserve company resources as if they were our own because it makes good business sense at all times, not just during lean times..</p>
             </div >
             </div >
             <br > <br >
             <div class="row" >
             <div class="col-sm-4" >
             <span class="glyphicon glyphicon-wrench" > </span >
-            <h4 > INNOVATION</h4 >
-            <p > Innovative efforts, ideas and methods that continually improve business processes.</p >
+            <h4>Ignite Passion for the Greater Good</h4>
+            <p>We take pride in our commitment to improving the world in which we live and take an active role in preserving our environment for future generations. We are steadfast in our devotion to the communities we serve and in actively promoting employee involvement in community improvement projects.</p>
             </div >
             <div class="col-sm-4" >
             <span class="glyphicon glyphicon-check" > </span >
-            <h4 > EXCELLENCE</h4 >
-            <p > Striving for excellence in every task no matter the size.</p >
+            <h4>Strive to Innovate</h4>
+            <p> We value passion, determination, perseverance, and innovation. We are inspired because we believe in what we are doing and where we are going. We believe in using innovation to remove obstacles and help you succeed in your goals.</p>
             </div >
             <div class="col-sm-4" >
             <span class="glyphicon glyphicon-phone" > </span >
-            <h4 > TEAM WORK</h4 >
-            <p > Working as one team to achieve corporate goals.</p >
+            <h4> Live a Balanced Life</h4>
+            <p>Our employees are our greatest asset and people we value highly as individuals. We support everyone managing a work life balance that is aligned with their needs and we also actively monitor all engagements to ensure our owners and employees have time for family, community and personal interests.</p>
+            </div >
+                <div class="col-sm-4" >
+            <span class="glyphicon glyphicon-phone" > </span >
+            <h4> Invest In Exceptional Culture </h4>
+            <p>We strive to hire and retain talented people from diverse backgrounds that are able to create a high impact for our clients and internally within Centric Consulting.</p>
             </div >
             </div >
             </div >
