--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,21 +17,13 @@
             }
         </style>
 
-        <h1>Home Page</h1>
-        <h2> this is where users will be able to create posts and view a feed of posts created by other users</h2>
+        <h1>Centric Consulting Project</h1>
+        <h2> </h2>
         <p class="lead"></p>
 
     </div>
 
-    <div class="media">
-  <div class="media-left">
-    <img src="img_avatar1.png" class="media-object" style="width:60px">
-  </div>
-  <div class="media-body">
-    <h4 class="media-heading">John Doe</h4>
-    <p>Example Post</p>
-  </div>
-</div>
+    
 
 
 </body>
